# Template_L3

./: questions.txt
L3A/: .clangd  project.cbuild-idx.yml  project.cproject.yml  project.csolution.yml
L3A/src/: LED.c  SysTimer.c  main.c
L3A/tmp/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  roots.cmake
L3A/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
L3A/tmp/project+Target_1/: CMakeLists.txt  groups.cmake
L3A/tmp/project+Target_1/src/project+Target_1-stamp/: project+Target_1-configure-.cmake  project+Target_1-database-.cmake  project+Target_1-source_dirinfo.txt
L3A/tmp/project+Target_1/tmp/: project+Target_1-cfgcmd.txt  project+Target_1-mkdirs.cmake
L3B/: .clangd  project.cbuild-idx.yml  project.cbuild-pack.yml  project.cproject.yml
L3B/src/: main.c
L3B/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
L3B/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
L3B/tmp/project+Target_1/src/project+Target_1-stamp/: project+Target_1-configure-.cmake  project+Target_1-database-.cmake  project+Target_1-source_dirinfo.txt
L3B/tmp/project+Target_1/tmp/: project+Target_1-cfgcmd.txt  project+Target_1-mkdirs.cmake
L3C/: .clangd  project.cbuild-idx.yml
L3C/src/: main.c
L3C/tmp/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  roots.cmake
L3C/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
L3C/tmp/project+Target_1/: groups.cmake  toolchain.cmake
L3C/tmp/project+Target_1/src/project+Target_1-stamp/: project+Target_1-configure-.cmake  project+Target_1-database-.cmake  project+Target_1-source_dirinfo.txt
L3C/tmp/project+Target_1/tmp/: project+Target_1-cfgcmd.txt  project+Target_1-mkdirs.cmake
